dev/prospectio/pgvector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgvector
  namespace: prospectio
spec:
  selector:
    app: pgvector
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
