dev/prospectio/pgvector/ingress-route-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pgvector-tcp
  namespace: prospectio
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pgvector
          port: 5432
